<resources>
    <string name="app_name">ordinarioJera</string>
    <string name="sign_in">sing_in</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="login">login</string>
    <string name="forgot_password">forgot_password</string>
    <string name="anterior">anterior</string>
    <string name="productos">productos</string>
    <string name="celulares">celulares</string>
    <string name="laptops">laptops</string>
    <string name="tablets">tablets</string>
    <string name="xiaomi_redmi_9_pro">xiaomi_redmi_9_pro</string>
    <string name="carac1">carac1</string>
    <string name="xiaomi2">xiaomi2</string>
    <string name="cantidad1">cantidad1</string>
    <string name="inicio2">inicio2</string>
    <string name="comprar">comprar</string>
    <string name="moto_g">moto_g</string>
    <string name="MOTOG1">MOTOG1</string>
    <string name="CARACMOTO">caracmoto</string>
    <string name="cantidad2">cantidad2</string>
    <string name="inicio3">inicio3</string>
    <string name="comprar2">comprar2</string>
    <string name="iphone_pro">phone_pro</string>
    <string name="iphonepro">iphonepro</string>
    <string name="caraciphonepro">caraciphonepro</string>
    <string name="cantidad4">cantidad4</string>
    <string name="regresar4">regresar4</string>
    <string name="comprar3">comprar3</string>
    <string name="ipad_mini">ipad_mini</string>
    <string name="caracipadmini">caracipadmini</string>
    <string name="regresar">regresar</string>
    <string name="cantidad5">cantidad5</string>
    <string name="tablet_a_10">tablet_a_10</string>
    <string name="caraca10">caraca10</string>
    <string name="a10">a10</string>
    <string name="regresar6">regresar6</string>
    <string name="comprar4">comprar4</string>
    <string name="cantidad7">cantidad7</string>
    <string name="huawei_t_10">huawei_t_10</string>
    <string name="CARACTHUAWEI">caracthuawei</string>
    <string name="comprar6">comprar6</string>
    <string name="costo_10_000">costo_10_000</string>
    <string name="costo_20_000">costo_20_000</string>
    <string name="modelos_de_celulares">modelos_de_celulares</string>
    <string name="xiaomi1">xiaomi1</string>
    <string name="motog">motog</string>
    <string name="iphone">iphone</string>
    <string name="costo_8_000">costo_8_000</string>
    <string name="razer_kraken_x_lite">razer_kraken_x_lite</string>
    <string name="caracrazer">caracrazer</string>
    <string name="razer1">razer1</string>
    <string name="regresar7">regresar7</string>
    <string name="comprar7">comprar7</string>
    <string name="cantidad8">cantidad6</string>
    <string name="diadema_hyperx">diadema_hyperx</string>
    <string name="hyper">hyper</string>
    <string name="caracthype">carachype</string>
    <string name="diameda_microsoft">diadema_microsoft</string>
    <string name="hyperex">xbox</string>
    <string name="caracxbox">caracxbox</string>
    <string name="regresar8">regresar8</string>
    <string name="comprar10">comprar10</string>
    <string name="ipad_mini2">ipad_mini2</string>
    <string name="costo_5_000">costo_5_000</string>
    <string name="costo_3_500">costo_3_500</string>
    <string name="modelos_de_tablets">modelos_de_tablets</string>
    <string name="costo_1_000">costo_1_000</string>
    <string name="costo_4_500">costo_4_500</string>
    <string name="costo_2_200">costo_2_200</string>
</resources>